--- a/docs/style.css
+++ b/docs/style.css
@@ -30,6 +30,10 @@ footer { width:100%; }
 .quote {  display: flex; flex-direction: column; justify-content: center;  align-items: center; }
 
 .section-content>div { display:grid; grid-auto-flow: column; gap: .4em; width: 100%; }
+.section-content code{ background:none; 
+    p{ display:inline; }
+}
+
 strong { color: #27ae60; }
 h1,h2,h3,h4,h5,h6{margin-top: .2rem!important;}
 h1 {
@@ -77,7 +81,6 @@ li {
     backdrop-filter: blur(10px);
 }
 .stat-number { font-weight: bold; display: block; color: #27ae60; }
-code p{ margin:0;}
 /* Smaller font class for dense technical content */
 .smallText .section-content {
     font-size: clamp(0.9rem, 2.1vh, 1rem) !important;
